[gd_scene load_steps=7 format=3 uid="uid://cvbsfd7t344un"]

[ext_resource type="Script" path="res://menu/scripts/screens/tutorial_gameover.gd" id="1_2jv4a"]
[ext_resource type="FontFile" uid="uid://hde2h44fr046" path="res://fonts/sani_trixie_sans.ttf" id="2_u14gq"]

[sub_resource type="Animation" id="Animation_sha14"]
resource_name = "end"
step = 0.05

[sub_resource type="Animation" id="14"]
resource_name = "start"
length = 1.8
step = 0.05

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i76yb"]
_data = {
"end": SubResource("Animation_sha14"),
"start": SubResource("14")
}

[sub_resource type="LabelSettings" id="LabelSettings_2pam4"]
font = ExtResource("2_u14gq")
font_size = 56

[node name="Gameover" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2jv4a")

[node name="A" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i76yb")
}

[node name="Outro" type="ColorRect" parent="."]
z_index = 777
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)
metadata/_edit_group_ = true

[node name="Text1" type="Label" parent="Outro"]
layout_mode = 0
offset_left = 140.0
offset_top = 304.0
offset_right = 1760.0
offset_bottom = 368.0
text = "And that's it! "
label_settings = SubResource("LabelSettings_2pam4")

[node name="Text2" type="Label" parent="Outro"]
layout_mode = 0
offset_left = 140.0
offset_top = 448.0
offset_right = 1760.0
offset_bottom = 511.0
text = "Now you can try playlist and time attack modes
"
label_settings = SubResource("LabelSettings_2pam4")

[node name="Text3" type="Label" parent="Outro"]
layout_mode = 0
offset_left = 140.0
offset_top = 512.0
offset_right = 1794.0
offset_bottom = 575.0
text = "or do some more practice with common block patterns in practice mode. "
label_settings = SubResource("LabelSettings_2pam4")

[node name="Text4" type="Label" parent="Outro"]
layout_mode = 0
offset_left = 140.0
offset_top = 632.0
offset_right = 1794.0
offset_bottom = 695.0
text = "Have a nice day and good luck!"
label_settings = SubResource("LabelSettings_2pam4")
